--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/rayarek.loader.js";
       var config = {
-        dataUrl: buildUrl + "/rayarek.data.br",
-        frameworkUrl: buildUrl + "/rayarek.framework.js.br",
-        codeUrl: buildUrl + "/rayarek.wasm.br",
+        dataUrl: buildUrl + "/rayarek.data.unityweb",
+        frameworkUrl: buildUrl + "/rayarek.framework.js.unityweb",
+        codeUrl: buildUrl + "/rayarek.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Photon Engine",
         productName: "Quiz Network",
